--- a/frontend/public/admin.html
+++ b/frontend/public/admin.html
@@ -14,6 +14,7 @@
             <a href="about.html">About</a>
             <a href="contact.html">Contact</a>
             <a href="admin.html">Admin</a>
+            <a href="tableAdmin.html">Table Admin</a>
         </nav>
 
         <form id="add-player-form">
