Basic implementation of login, login is checked against the site_user db and returned. Authentication is saved against the JSESSIONID and passed in as credentials on fetch requests. Subsequent requests for the same session should still be authenticated, and therefore authorised.

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -14,6 +14,7 @@
             <a href="about.html">About</a>
             <a href="contact.html">Contact</a>
             <a href="admin.html">Admin</a>
+            <a href="login.html">Login</a>
         </nav>
 
         <div id="table-block">
