--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -15,6 +15,7 @@
             <a href="contact.html">Contact</a>
             <a href="admin.html">Admin</a>
             <a href="login.html">Login</a>
+            <button id="logout-button">Logout</button>
         </nav>
 
         <div id="table-block">
