Added the pages and backend for processing User details, updates and password updates.

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -15,12 +15,14 @@
             <a href="contact.html">Contact</a>
             <a href="admin.html">Admin</a>
             <a href="login.html">Login</a>
+            <a href="user-management.html">Account</a>
             <button id="logout-button">Logout</button>
         </nav>
 
         <div id="table-block">
             <!-- Player data inserted here from server -->
         </div>
+
         <script src="../src/js/script.js"></script>
     </body>
 </html>
