Initial implementation of PDF generation using pdfBox.
Generation is done via the generate pdf button in the table admin page. Formatting is not currently complete but there is placeholder formatting courtesy of copilot which prints the divisions.

--- a/frontend/public/password-update.html
+++ b/frontend/public/password-update.html
@@ -15,19 +15,20 @@
 
         <form id="update-password-form">
             <h2>Update password</h2>
-            <label>Current Password</label>
+            <label for="old-password-field">Current Password</label>
             <input id="old-password-field" type="password"/>
             <br/><br/>
-            <label>New Password</label>
+            <label for="new-password-field">New Password</label>
             <input id="new-password-field" type="password"/>
             <br/>
-            <label>Verify New Password</label>
+            <label for="verify-password-field">Verify New Password</label>
             <input id="verify-password-field" type="password"/>
             <br/><br/>
-            <p1 id="warning-text"></p1>
+            <p id="warning-text"></p>
+            <br/>
             <button type="button" onclick="" id="update-password-button">Save</button>
             <br/>
-            <p1 id="updated-text"></p1>
+            <p id="updated-text"></p>
         </form>
 
         <script src="../src/js/passwordUpdateScript.js"></script>
