--- a/frontend/public/tableAdmin.html
+++ b/frontend/public/tableAdmin.html
@@ -17,13 +17,14 @@
             <a href="tableAdmin.html">Table Admin</a>
         </nav>
 
-        <button id="topSaveDivisionsButton">Save Divisions</button>
-        <button id="newSeasonButton">New Season</button>
-        <input type="date" id="newSeasonEndDate">
+        <button id="save-divisions-button-top">Save Divisions</button>
+        <button id="generate-pdf-button">Generate PDF</button>
+        <button id="new-season-button">New Season</button>
+        <input type="date" id="new-season-end-date">
         <div id="table-block">
             <!-- Player data inserted here from server -->
         </div>
-        <button id="bottomSaveDivisionsButton">Save Divisions</button>
+        <button id="save-divisions-button-bottom">Save Divisions</button>
         <script src="../src/js/tableAdminScript.js"></script>
     </body>
 </html>
