--- a/frontend/public/password-update.html
+++ b/frontend/public/password-update.html
@@ -6,6 +6,7 @@
         <meta name="description" content="User management page">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="../src/css/styles.css">
+        <link rel="stylesheet" href="../src/css/accountStyles.css">
     </head>
     <body>
         <nav>
@@ -16,16 +17,21 @@
         <form id="update-password-form">
             <h2>Update password</h2>
             <label for="old-password-field">Current Password</label>
+            <br/>
             <input id="old-password-field" type="password"/>
             <br/><br/>
             <label for="new-password-field">New Password</label>
+            <br/>
             <input id="new-password-field" type="password"/>
             <br/>
             <label for="verify-password-field">Verify New Password</label>
+            <br/>
             <input id="verify-password-field" type="password"/>
             <br/><br/>
             <p id="warning-text"></p>
             <br/>
+            <a href="user-management.html">Return to Account Management</a>
+            <br/><br/>
             <button type="button" onclick="" id="update-password-button">Save</button>
             <br/>
             <p id="updated-text"></p>
