--- a/frontend/public/user-management.html
+++ b/frontend/public/user-management.html
@@ -2,10 +2,11 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Profile</title>
+        <title>PLCSL - Profile</title>
         <meta name="description" content="User management page">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="../src/css/styles.css">
+        <link rel="stylesheet" href="../src/css/accountStyles.css">
     </head>
     <body>
         <nav>
@@ -27,6 +28,7 @@
             <input id="phone-field" type="text"/>
             <br/><br/>
             <label>Availability Notes</label>
+            <br/>
             <p1>Use this for any notes relating to your availability and contact details e.g. what days of the week you
                 are typically available, are you contactable through WhatsApp, etc..</p1>
             <br/>
