--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -14,7 +14,7 @@
                 <a href="index.html">League</a>
                 <a href="about.html">About</a>
                 <!-- <a href="contact.html">Contact</a> -->
-                <a href="admin.html" id="admin-link" hidden>Admin</a>
+                <a href="admin.html" id="admin-link" hidden="">Admin</a>
             </div>
             <div class="nav-right">
                 <a href="login.html">Login</a>
