- Added game cells and game points saving. Frontend cells added to league table, only available for current user's player. API for persisting game details such as they are currently: just points.  - Bump spring-boot version.  - Shore up test data init.  - Changed the approach for getting the current Player details at server-side, now gets the User associated with the current session and applies changes to their Player as required, should prevent even attempts at authentication spoofing.

--- a/frontend/public/admin.html
+++ b/frontend/public/admin.html
@@ -19,25 +19,25 @@
 
         <form id="add-player-form">
             <h2>Add New Player</h2>
-            <label>Name</label>
+            <label for="name-field">Name</label>
             <input id="name-field" type="text"/>
             <br/><br/>
-            <label>Phone Number</label>
+            <label for="phone-field">Phone Number</label>
             <input id="phone-field" type="text"/>
             <br/><br/>
-            <label>Email</label>
+            <label for="email-field">Email</label>
             <input id="email-field" type="text"/>
             <br/><br/>
-            <label>Division</label>
+            <label for="division-field">Division</label>
             <input id="division-field" type="number"/>
             <br/><br/>
-            <label>Availability Notes</label>
-            <textarea id="availability-field" type="text"></textarea>
+            <label for="availability-field">Availability Notes</label>
+            <textarea id="availability-field"></textarea>
             <br/><br/>
-            <label>Red-Flagged</label>
+            <label for="red-flagged-field">Red-Flagged</label>
             <input id="red-flagged-field" type="checkbox"/>
             <br/><br/>
-            <label>Anonymise Player</label>
+            <label for="anonymise-field">Anonymise Player</label>
             <input id="anonymise-field" type="checkbox"/>
             <button type="button" onclick="" id="new-player-button">Save Player</button>
         </form>
@@ -60,25 +60,25 @@
                 <!-- List populated with player list from server -->
             </select>
             <br/><br/><br/>
-            <label>Name</label>
-            <input id="name-update-field" type="text" autocomplete="off"></input>
+            <label for="name-update-field">Name</label>
+            <input id="name-update-field" type="text" autocomplete="off"/>
             <br/><br/>
-            <label>Phone Number</label>
-            <input id="phone-update-field" type="text" autocomplete="off"></input>
+            <label for="phone-update-field">Phone Number</label>
+            <input id="phone-update-field" type="text" autocomplete="off"/>
             <br/><br/>
-            <label>Email</label>
-            <input id="email-update-field" type="text" autocomplete="off"></input>
+            <label for="email-update-field">Email</label>
+            <input id="email-update-field" type="text" autocomplete="off"/>
             <br/><br/>
-            <label>Division</label>
-            <input id="division-update-field" type="number" autocomplete="off"></input>
+            <label for="division-update-field">Division</label>
+            <input id="division-update-field" type="number" autocomplete="off"/>
             <br/><br/>
-            <label>Availability Notes</label>
-            <textarea id="availability-update-field" type="text" autocomplete="off"></textarea>
+            <label for="availability-update-field">Availability Notes</label>
+            <textarea id="availability-update-field" autocomplete="off"></textarea>
             <br/><br/>
-            <label>Red-Flagged</label>
+            <label for="red-flagged-update-field">Red-Flagged</label>
             <input id="red-flagged-update-field" type="checkbox"/>
             <br/><br/>
-            <label>Anonymise Player</label>
+            <label for="anonymise-update-field">Anonymise Player</label>
             <input id="anonymise-update-field" type="checkbox"/>
 
             <button type="button" onclick="" id="update-player-button">Update Player</button>
