--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -15,6 +15,7 @@
                 <a href="about.html">About</a>
                 <!-- <a href="contact.html">Contact</a> -->
                 <a href="admin.html" id="admin-link" hidden="">Admin</a>
+                <a href="tableAdmin.html" id="table-admin-link" hidden="">Table Admin</a>
             </div>
             <div class="nav-right">
                 <a href="login.html">Login</a>
