--- a/frontend/public/tableAdmin.html
+++ b/frontend/public/tableAdmin.html
@@ -17,11 +17,13 @@
             <a href="tableAdmin.html">Table Admin</a>
         </nav>
 
-        <button id="save-divisions-button-top">Save Divisions</button>
+        <h3>Season</h2>
         <button id="generate-pdf-button">Generate PDF</button>
         <button id="new-season-button">New Season</button>
         <input type="date" id="new-season-end-date">
+
         <div id="table-block">
+            <button id="save-divisions-button-top">Save Divisions</button>
             <!-- Player data inserted here from server -->
         </div>
         <button id="save-divisions-button-bottom">Save Divisions</button>
