Properties and script tidyups

--- a/frontend/public/admin.html
+++ b/frontend/public/admin.html
@@ -91,5 +91,6 @@
         </form>
     </body>
 
+    <script src="../src/js/config.js"></script>
     <script src="../src/js/adminScript.js"></script>
 </html>
