--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -28,6 +28,7 @@
             <!-- Player data inserted here from server -->
         </div>
 
+        <script src="js/config.js"></script>
         <script src="../src/js/script.js"></script>
     </body>
 </html>
