--- a/frontend/public/login.html
+++ b/frontend/public/login.html
@@ -33,5 +33,7 @@
 			<input id="login-button" type="button" value="Log in" />
 		</form>
 	</body>
+
+    <script src="../src/js/config.js"></script>
 	<script src="../src/js/loginScript.js"></script>
 </html>
