--- a/frontend/public/password-update.html
+++ b/frontend/public/password-update.html
@@ -37,6 +37,7 @@
             <p id="updated-text"></p>
         </form>
 
+        <script src="../src/js/config.js"></script>
         <script src="../src/js/passwordUpdateScript.js"></script>
     </body>
 </html>
