--- a/frontend/public/tableAdmin.html
+++ b/frontend/public/tableAdmin.html
@@ -27,6 +27,8 @@
             <!-- Player data inserted here from server -->
         </div>
         <button id="save-divisions-button-bottom">Save Divisions</button>
+
+        <script src="../src/js/config.js"></script>
         <script src="../src/js/tableAdminScript.js"></script>
     </body>
 </html>
