--- a/frontend/public/user-management.html
+++ b/frontend/public/user-management.html
@@ -51,6 +51,7 @@
             <p1 id="updated-text"></p1>
         </form>
 
+        <script src="../src/js/config.js"></script>
         <script src="../src/js/userScript.js"></script>
     </body>
 </html>
